# auto-swe-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  evaluate_variance.py  evaluation_report.md  inference.py  models.py  openenv.yaml  pyproject.toml  qa_parser_test.py  requirements.txt  tasks.py  test_offline_simulation.py
server/: app.py  auto_swe_environment.py
