[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-auto-swe-env"
version = "0.1.0"
description = "Autonomous Software Engineer Environment for OpenEnv — AI agent finds and fixes bugs in a simulated codebase"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # OpenEnv core (server framework, base Environment class)
    "openenv-core[core]>=0.2.2",
    # Web framework
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    # HTTP client for inference
    "requests>=2.31.0",
    # Testing framework (used inside the env to run agent's code)
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
inference = [
    "openai>=1.0.0",
]

[project.scripts]
server = "auto_swe_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["auto_swe_env", "auto_swe_env.server"]
package-dir = { "auto_swe_env" = ".", "auto_swe_env.server" = "server" }
